--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,8 @@ a {
 
 .titles {
     font-size: 2.5rem;
-    margin-left: 6%;
-    margin-bottom: 15px;
+    margin: 10rem 0px 1rem 6%;
+
 }
 
 
@@ -43,33 +43,41 @@ a {
 }
 
 
-
 .header-main .logo {
-    width: 10%;
-    color: var(--color-black);
-    font-size: 1.4rem;
+    border-radius: 3px;
+    padding: 10px 20px;
+    background: #8E2DE2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-size: 1.5rem;
     font-weight: 800;
-    margin-bottom: 3px;
+    margin-bottom: 4.5px;
+    transition: border-radius .3s;
 }
 
-.header-main .logo a:hover {
-    color: #48bb78;
+.header-main .logo:hover {
+    border-radius: 10px;
 }
+
+.header-main .logo a {
+    color: var(--background);
+}
+
 
 
 .header-main .search {
     width: 50%;
-    border-radius: 30px;
+    border-radius: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-left: 15px;
-    border: 2px solid #40cf7c;
     background-color: white;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
 .header-main .search input {
-    width: 90%;
+    width: 85%;
     outline: none;
     border: none;
     color: black;
@@ -78,22 +86,25 @@ a {
 }
 
 .header-main .search svg {
-    background-color: #40cf7c;
-    padding: 15px;
+    background-color: #3182ce;
+    padding: 17px;
     cursor: pointer;
-    border-radius: 25px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    fill: var(--background);
+    transition: background-color .3s;
 }
 
 .header-main .search svg:hover {
-    background-color: #3fb470 
+    background-color: rgb(39, 138, 231); 
 }
 
 .header-main .cart {
-    width: 20%;
     display: flex;
-    width: 80px;
+    width: 100px;
     justify-content: space-between;
     cursor: pointer;
+    font-size: 1.15rem;
 }
 
 /**************
@@ -110,7 +121,7 @@ a {
 }
 
 .navigation ul li {
-    font-size: 1.05rem;
+    font-size: 1.15rem;
     position: relative;
 }
 
@@ -236,7 +247,7 @@ Slide show
     position: relative;
     height: 100%;
     display: grid;
-    grid-gap: 15px;
+    grid-gap: 25px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
     transition: margin .6s;
@@ -262,6 +273,141 @@ Slide show
 }
 
 .all-offers .offers .offers-right svg {
-    fill: var(--background)
+    fill: var(--background);
+    transition: width .2s, height .2s;
+}
+
+.all-offers .offers .offers-right svg:hover {
+    height: 45px;
+    width: 45px;
+}
+
+
+/*********** 
+All Products
+ ***********/
+
+ .all-products {
+     width: 90%;
+     margin: 0 auto;
+     height: auto;
+     display: grid;
+     grid-template-columns: repeat(4, 1fr);
+     grid-template-rows: repeat(3, 250px);
+     grid-gap: 25px;
+ }
+
+ .all-products .product {
+     background: #8E2DE2;  /* fallback for old browsers */
+     background: -webkit-linear-gradient(to top, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
+     background: linear-gradient(to top, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+     line-height: 250px;
+     text-align: center;
+     font-size: 2.8rem;
+     color: white;
+ }
+
+
+
+/***********
+ Pagination 
+ *********/
+
+.pagination {
+    margin: 2.5rem auto;
+    display: grid;
+    grid-template-columns: repeat(8, 60px);
+    grid-template-rows: 60px;
+    grid-gap: 15px;
+}
+
+.pagination .page {
+    background-color: #44337a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    cursor: pointer;
+
+}
+
+
+ /********
+  Footer Main
+ ********/
+
+ .footer-main {
+     margin-top: 10rem;
+     background-color: #161a22;
+     height: 300px;
+     display: grid;
+     grid-template-areas: "products socials info" "footer footer footer";
+     grid-template-rows: 1fr 0.25fr;
+     grid-template-columns: 1fr 1.8fr 1.5fr;
+ }
+
+ .footer-main .products {
+     padding: 25px;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+
+ }
+
+ .footer-main .products h3{
+     color: white;
+     font-size: 1rem;
+     text-transform: uppercase;
+ }
+
+ .footer-main .products a {
+    color: rgb(187, 187, 187);
+    font-size: 0.8rem;
+ }
+
+ .footer-main .socials {
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+     padding: 25px 10%;
+ }
+
+ .footer-main .socials .feather{ 
+    width: 35px;
+    height: 35px;
+    fill: #161a22;
+    stroke: rgb(131, 131, 131);
+    stroke-width: 1.3;
+    transition: stroke .3s;
+}
+
+.footer-main .socials .feather:hover {
+    stroke: white;
+}
+
+.footer-main .info {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.footer-main .info .dark {
+    color: rgb(131, 131, 131);
+}
+
+
+.footer-main .footer {
+    padding: 0px 25px;
+    line-height: 60px;
+    grid-area: footer;
+    background-color: #15181b;
+    color: rgb(187, 187, 187);
+}
+
+.footer-main .footer .improved {
+    padding-left: 5px;
+    border-left: 2px solid white;
+    color: white;
 }
 
